@@ -94,6 +94,7 @@ Entry { filename = "ftp-vuln-cve2010-4221.nse", categories = { "intrusive", "vul
 Entry { filename = "ganglia-info.nse", categories = { "default", "discovery", "safe", } }
 Entry { filename = "giop-info.nse", categories = { "default", "discovery", "safe", } }
 Entry { filename = "gopher-ls.nse", categories = { "default", "discovery", "safe", } }
+Entry { filename = "gpsd-info.nse", categories = { "discovery", "safe", } }
 Entry { filename = "hadoop-datanode-info.nse", categories = { "default", "discovery", "safe", } }
 Entry { filename = "hadoop-jobtracker-info.nse", categories = { "default", "discovery", "safe", } }
 Entry { filename = "hadoop-namenode-info.nse", categories = { "default", "discovery", "safe", } }
